Corrected errors in html

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <p>In the right of the image, there is a newspaper, which symbolizes the press during the Iranian revolution. In <i>Persepolis</i>, we see the importance of the press mentioned several times; the first detailed description of the Iran-Iraq War when it is announced on the news (Page 84-85), and a single newspaper has a profound impact on Marji (Page 70).</p>
       <p>Lastly, the military vehicles in the scene represent the Iranian military. The army initially followed the Shah's orders, and suppressed protests, as shown on the far right; but then began to turn against the Shah, marching alongside protestors. After the Revolution, they still had a major role, which included inforcing Islamic Law and fighting against Iraq in the War. I made a specific choice to only show American military equipment, which were what which most of Iran's armed forces were equipped with. </p>
       <p>My overall aim of this illustration was to showcase the world described in <i>Persepolis</i> as a panorama of everyone involved. All of the individual elements all surround the central element-the book <i>Persepolis</i> itself. Though I could not use every single character and location in the book, I tried to provide a comprehensive picture of what is happening, right at the midpoint of <i>Persepolis's</i> plot.</p>
-      <p>As a note, doing everything digitally was my way of creating art that could not be realized in real life. And-yes-I know that I am not using Times New Roman, and font size 12, because artwork should be alive and with expressive typography, rather than with bland and monotonous standard forms.</p>
-      <p>Finally, you can download a 3.5K verson of the image from the link beow:</p>
+      <p>Doing everything digitally was my way of creating art that could not be realized in real life. And-yes-I know that I am not using Times New Roman, and font size 12, because artwork should be alive and with expressive typography, rather than with bland and monotonous standard forms.</p>
+      <p>Finally, you can download a 3.5K verson of the image from the link below:</p>
       <button 
       type="button" 
       class="btn btn-raised btn-primary"
